[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "conda-checkpoints"
description = "conda plugin to save lockfiles to your environment after each environment modification"
readme = "README.md"
authors = [
  {name = "Jaime Rodríguez-Guerra", email = "jrodriguez@quansight.com"}
]
license = {file = "LICENSE"}
classifiers = [
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy"
]
requires-python = ">=3.8"
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/jaimergp/conda-checkpoints"

[project.entry-points.conda]
conda-checkpoints = "conda_checkpoints.plugin"

[tool.pixi.project]
name = "conda-checkpoints"
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64", "osx-64", "win-64"]

[tool.pixi.dependencies]
conda = ">=23.7.3"

[tool.pixi.feature.test.dependencies]
pytest = "*"
pip = "*"

[tool.pixi.feature.test.tasks]
dev = "pip install -e . --no-deps --quiet"
test = "pytest"
devtest = { depends_on = ["dev", "test"] }

[tool.pixi.environments]
test = ["test"]

[tool.hatch.version]
source = "vcs"

[tool.ruff]
line-length = 99
